--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <body>
         <script type='text/javascript' id='lt_ws' src='http://localhost:51229/socket.io/lighttable/ws.js'></script>
         <div id="contacts"></div>
+        <div id="app"></div>
         <script src="http://fb.me/react-0.9.0.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="om_tut.js" type="text/javascript"></script>
