--- a/harmful/index.html
+++ b/harmful/index.html
@@ -1,4 +1,5 @@
 <html>
+    <head><script type='text/javascript' id='lt_ws' src='http://localhost:38899/socket.io/lighttable/ws.js'></script></head>
     <body>
         <div id="app"></div>
         <script src="http://fb.me/react-0.9.0.js"></script>
