--- a/mouse/index.html
+++ b/mouse/index.html
@@ -1,6 +1,8 @@
 <html>
+    <head><script type='text/javascript' id='lt_ws' src='http://localhost:38899/socket.io/lighttable/ws.js'></script></head>
     <body>
         <div id="app"></div>
+        <div id="rewrite"></div>
         <script src="http://fb.me/react-0.9.0.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="main.js" type="text/javascript"></script>
