--- a/sortable/index.html
+++ b/sortable/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <script type='text/javascript' id='lt_ws' src='http://localhost:35347/socket.io/lighttable/ws.js'></script>
         <style>
             #app {
                width: 300px;
