--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
-    <head><script type='text/javascript' id='lt_ws' src='http://localhost:51179/socket.io/lighttable/ws.js'></script>
+    <head><script type='text/javascript' id='lt_ws' src='http://localhost:58761/socket.io/lighttable/ws.js'></script>
+        <style>
+            ul li input {
+                width: 400px;
+            }
+            ul li button {
+                margin-left: 10px;
+            }
+        </style>
     </head>
     <body>
         <div id="registry"></div>
+        <div id="classes"></div>
         <script src="http://fb.me/react-0.9.0.js"></script>
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="om_tut.js" type="text/javascript"></script>
